# zfdb

./: .gitignore  CONTRIBUTORS.md  LICENSE  Notes.md  README.md  contributors.md  mars_req  pyproject.toml  test.grb  test.json  test_req.rq
demo/: demo.py
docs/: cli.rst  conf.py  faq.rst  index.rst  install.rst  intro.rst  release.rst
docs/_theme/ecmwf/: theme.conf
docs/_theme/ecmwf/static/: custom.css
docs/api/: index.rst
docs/tutorials/: example_notebook.ipynb  index.rst
server/: __init__.py  client.py  server.py
src/zfdb/: FDBStore.py  FDBStoreV3.py  GribJumpRequestMerger.py  MarsRequest.py  ZarrKeyMatcher.py  ZarrMetadataBuilder.py  __init__.py  datasources.py  error.py  mapping.py  request.py  zarr.py
src/zfdb/business/: FDBStore.py  GribJumpRequestMerger.py  GribTools.py  GridUtils.py  MarsRequestBuilder.py  Request.py  ZarrKeyMatcher.py  ZarrMetadataBuilder.py  __init__.py
src/zfdb/business/transformers/: FloatingPointTransformers.py
src/zfdb/fsspec/: FDBFs.py
src/zfdb/gribjump/: request.py
src/zfdb/requests/: Request.py
src/zfdb/utils/: chunk_mapper.py  date_mapping.py
tests/: __init__.py  conftest.py  playbook.py  test_store.py
tests/data/: testdata.grib
tests/data/anemoi_minimal.zarr/: .zattrs
tests/data/anemoi_minimal.zarr/count/: .zarray  0
tests/data/anemoi_minimal.zarr/data/: .zarray  0.0.0.0  0.1.0.0  0.2.0.0  1.0.0.0  1.1.0.0  1.2.0.0  2.0.0.0  2.1.0.0  2.2.0.0  3.0.0.0  3.1.0.0  3.2.0.0
tests/data/anemoi_minimal.zarr/dates/: .zarray  0
tests/data/anemoi_minimal.zarr/has_nans/: .zarray  0
tests/data/anemoi_minimal.zarr/maximum/: 0
tests/data/anemoi_minimal.zarr/mean/: 0
tests/data/anemoi_minimal.zarr/minimum/: 0
tests/data/anemoi_minimal.zarr/squares/: 0
tests/data/anemoi_minimal.zarr/stdev/: 0
tests/data/anemoi_minimal.zarr/sums/: 0
tests/data/grib/: 0_testdata.grib  1_testdata.grib
tests/data/integration/: recipe.yaml
tests/data/integration/mars_requests/: 1.req  2.req  3.req  4.req  5.req
tests/data/recipes/: example.yaml
tests/examples/: test_example.py
tests/integration/: test_access.py  test_anemoi_cmp.py  test_demo.py  test_transformers.py
tests/support/: util.py
tests/unit/: test_request.py  test_zarr_matcher.py
tests/unit/gribjump/: test_request.py
tests/utils/: Utils.py  test_datetime_mapping.py  util.py
tests/zfdb/: test_recepie.py  test_recipe.py  test_store.py
tools/: retracer.py
tools/retracer/: database.py  retracer
tools/retracer/commands/: extract.py  parsestrace.py  replay.py
