[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = 'zfdb'
version = '2024.10'
readme = "README.md"
license = "LICENSE"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# TODO(kkratz): seperate general and test only dependencies
dependencies = [
    'setuptools',
    'pytest',
    'cffi',
    'zarr~=2.18',
    'pyyaml',
    'pyfdb@git+https://github.com/ecmwf/pyfdb.git@develop',
    'pygribjump@git+https://github.com/ecmwf/gribjump.git@develop',
    'ecmwf-api-client',
    'pyyaml'
]

[project.scripts]
docsample-cli = "docsample.cli_tool:main"

[project.optional-dependencies]
docs = [
    "Sphinx",
    "sphinx-rtd-theme",
    "nbsphinx",
    "ipython",
    "jupyter",
]

[tool.sphinx]
project = "ECMWF docsample"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
